--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS + CSS Clock</title>
-</head>
-<body>
-
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>JS + CSS Clock</title>
+  </head>
+  <body>
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
@@ -15,60 +13,86 @@
       </div>
     </div>
 
+    <style>
+      html {
+        background: #018ded url(https://unsplash.it/1500/1000?image=881&blur=5);
+        background-size: cover;
+        font-family: 'helvetica neue';
+        text-align: center;
+        font-size: 10px;
+      }
 
-  <style>
-    html {
-      background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
-      background-size: cover;
-      font-family: 'helvetica neue';
-      text-align: center;
-      font-size: 10px;
-    }
+      body {
+        margin: 0;
+        font-size: 2rem;
+        display: flex;
+        flex: 1;
+        min-height: 100vh;
+        align-items: center;
+      }
 
-    body {
-      margin: 0;
-      font-size: 2rem;
-      display: flex;
-      flex: 1;
-      min-height: 100vh;
-      align-items: center;
-    }
+      .clock {
+        width: 30rem;
+        height: 30rem;
+        border: 20px solid white;
+        border-radius: 50%;
+        margin: 50px auto;
+        position: relative;
+        padding: 2rem;
+        box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #efefef, inset 0 0 10px black,
+          0 0 10px rgba(0, 0, 0, 0.2);
+      }
 
-    .clock {
-      width: 30rem;
-      height: 30rem;
-      border: 20px solid white;
-      border-radius: 50%;
-      margin: 50px auto;
-      position: relative;
-      padding: 2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
-    }
+      .clock-face {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transform: translateY(-3px); /* account for the height of the clock hands */
+      }
 
-    .clock-face {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
-    }
+      .hand {
+        width: 50%;
+        height: 6px;
+        background: black;
+        position: absolute;
+        top: 50%;
+        transform-origin: 100%;
+      }
+    </style>
 
-    .hand {
-      width: 50%;
-      height: 6px;
-      background: black;
-      position: absolute;
-      top: 50%;
-    }
+    <script>
+      const secondDegs = 6 // degrees
+      const minuteDegs = 6 // same for minute
+      const hourDegs = 30 // degrees
+      const hourMinuteDegs = 0.5 // to account for the space between two hour hands
+      const initialDegs = 90
 
-  </style>
+      // lets show 00:00:00 initially
+      const hands = Array.from(document.querySelector('.clock-face').children)
+      hands.forEach((h) => (h.style.transform = `rotate(${initialDegs}deg)`))
 
-  <script>
+      function handleSeconds() {
+        const now = new Date()
+        const hour = now.getHours()
+        const minute = now.getMinutes()
+        const second = now.getSeconds()
 
+        const currentHourDegs = initialDegs + hour * hourDegs + minute * hourMinuteDegs
+        const hourHand = document.querySelector('.hour-hand')
+        hourHand.style.transform = `rotate(${currentHourDegs}deg)`
 
-  </script>
-</body>
+        const currentMinuteDegs = initialDegs + minute * minuteDegs
+        const minuteHand = document.querySelector('.min-hand')
+        minuteHand.style.transform = `rotate(${currentMinuteDegs}deg)`
+
+        const currentSecDegs = initialDegs + second * secondDegs
+        const secondHand = document.querySelector('.second-hand')
+        secondHand.style.transform = `rotate(${currentSecDegs}deg)`
+
+        setTimeout(handleSeconds, 1000)
+      }
+
+      handleSeconds()
+    </script>
+  </body>
 </html>
