--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -1,46 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Console Tricks!</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Console Tricks!</title>
+  </head>
+  <body>
+    <p onClick="makeGreen()">×BREAK×DOWN×</p>
 
-  <p onClick="makeGreen()">×BREAK×DOWN×</p>
+    <script>
+      const dogs = [
+        { name: 'Snickers', age: 2 },
+        { name: 'hugo', age: 8 },
+      ]
 
-  <script>
-    const dogs = [{ name: 'Snickers', age: 2 }, { name: 'hugo', age: 8 }];
+      function makeGreen() {
+        const p = document.querySelector('p')
+        p.style.color = '#BADA55'
+        p.style.fontSize = '50px'
+      }
 
-    function makeGreen() {
-      const p = document.querySelector('p');
-      p.style.color = '#BADA55';
-      p.style.fontSize = '50px';
-    }
+      // Regular
+      console.log('helloo')
 
-    // Regular
+      // Interpolated
+      console.log(`here are some ${dogs}`)
 
-    // Interpolated
+      // Styled
 
-    // Styled
+      // warning!
+      console.warn('wtf?')
 
-    // warning!
+      // Error :|
+      console.error('this is an error')
 
-    // Error :|
+      // Info
+      console.info('THis is some info ')
 
-    // Info
+      // Testing
+      console.assert(1 === 2, 'Assertion fails')
 
-    // Testing
+      // clearing
+      console.clear()
 
-    // clearing
+      // Viewing DOM Elements
+      const p = document.querySelector('p')
+      console.log(p)
+      console.dir(p)
 
-    // Viewing DOM Elements
+      // Grouping together
+      console.table(dogs)
 
-    // Grouping together
+      // counting
+      console.count('Erkin')
+      console.count('Erkin')
+      console.count('Erkin')
+      console.count('Erkin')
 
-    // counting
-
-    // timing
-
-  </script>
-</body>
+      // timing
+      console.time('fetching data')
+      fetch('https://api.github.com/users/erkinun')
+        .then((data) => data.json())
+        .then((data) => {
+          console.timeEnd('fetching data')
+          console.log(data)
+        })
+    </script>
+  </body>
 </html>
