--- a/23 - Speech Synthesis/index-START.html
+++ b/23 - Speech Synthesis/index-START.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Speech Synthesis</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <title>Speech Synthesis</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="voiceinator">
-
       <h1>The Voiceinator 5000</h1>
 
       <select name="voice" id="voices">
@@ -17,25 +15,88 @@
       </select>
 
       <label for="rate">Rate:</label>
-      <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
+      <input name="rate" type="range" min="0" max="3" value="1" step="0.1" />
 
       <label for="pitch">Pitch:</label>
 
-      <input name="pitch" type="range" min="0" max="2" step="0.1">
+      <input name="pitch" type="range" min="0" max="2" step="0.1" />
       <textarea name="text">Hello! I love JavaScript 👍</textarea>
       <button id="stop">Stop!</button>
       <button id="speak">Speak</button>
-
     </div>
 
-<script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
-  const voicesDropdown = document.querySelector('[name="voice"]');
-  const options = document.querySelectorAll('[type="range"], [name="text"]');
-  const speakButton = document.querySelector('#speak');
-  const stopButton = document.querySelector('#stop');
-</script>
+    <script>
+      const msg = new SpeechSynthesisUtterance()
+      let voices = []
+      const synth = window.speechSynthesis
 
-</body>
+      const voicesDropdown = document.querySelector('[name="voice"]')
+      const options = document.querySelectorAll('[type="range"], [name="text"]')
+      const speakButton = document.querySelector('#speak')
+      const stopButton = document.querySelector('#stop')
+
+      function populateVoiceList() {
+        voices = synth.getVoices()
+        voices
+          .filter((v) => v.lang.includes('en-'))
+          .forEach((v) => {
+            const option = document.createElement('option')
+            option.textContent = v.name + ' (' + v.lang + ')'
+            option.setAttribute('data-lang', v.lang)
+            option.setAttribute('data-name', v.name)
+            voicesDropdown.appendChild(option)
+          })
+      }
+
+      const text = document.querySelector('[name="text"]')
+      const pitch = document.querySelector('[name="pitch"]')
+      const rate = document.querySelector('[name="rate"]')
+      let canSpeak = true
+      const speakFunction = () => {
+        msg.text = text.value
+        var selectedOption = voicesDropdown.selectedOptions[0].getAttribute('data-name')
+        console.log(selectedOption)
+        for (var i = 0; i < voices.length; i++) {
+          if (voices[i].name === selectedOption) {
+            msg.voice = voices[i]
+          }
+        }
+        msg.pitch = pitch.value
+        msg.rate = rate.value
+        canSpeak && synth.speak(msg)
+      }
+      speechSynthesis.addEventListener('voiceschanged', populateVoiceList)
+      speakButton.addEventListener('click', () => {
+        canSpeak = true
+        speakFunction()
+        setInterval(speakFunction, 5000)
+      })
+      text.addEventListener('change', speakFunction)
+
+      stopButton.addEventListener('click', () => {
+        console.log('stop speaking')
+        synth.cancel()
+        canSpeak = false
+      })
+      function toggle(startOver = true) {
+        speechSynthesis.cancel()
+        if (startOver) {
+          speechSynthesis.speak(msg)
+        }
+      }
+
+      function setOption() {
+        console.log(this.name, this.value)
+        msg[this.name] = this.value
+        toggle()
+      }
+
+      function setVoice() {
+        msg.voice = voices.find((voice) => voice.name === this.value)
+        toggle()
+      }
+      options.forEach((option) => option.addEventListener('change', setOption))
+      voicesDropdown.addEventListener('change', speakFunction)
+    </script>
+  </body>
 </html>
