--- a/30 - Whack A Mole/index-START.html
+++ b/30 - Whack A Mole/index-START.html
@@ -1,42 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Whack A Mole!</title>
-  <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Whack A Mole!</title>
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Whack-a-mole! <span class="score">0</span></h1>
+    <button onClick="startGame()">Start!</button>
 
-  <h1>Whack-a-mole! <span class="score">0</span></h1>
-  <button onClick="startGame()">Start!</button>
+    <div class="game">
+      <div class="hole hole1">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole2">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole3">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole4">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole5">
+        <div class="mole"></div>
+      </div>
+      <div class="hole hole6">
+        <div class="mole"></div>
+      </div>
+    </div>
 
-  <div class="game">
-    <div class="hole hole1">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole2">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole3">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole4">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole5">
-      <div class="mole"></div>
-    </div>
-    <div class="hole hole6">
-      <div class="mole"></div>
-    </div>
-  </div>
+    <script>
+      const holes = document.querySelectorAll('.hole')
+      const scoreBoard = document.querySelector('.score')
+      const moles = document.querySelectorAll('.mole')
 
-<script>
-  const holes = document.querySelectorAll('.hole');
-  const scoreBoard = document.querySelector('.score');
-  const moles = document.querySelectorAll('.mole');
+      // TODO this is with side effect, try to come up with a pure one
+      function pickHole() {
+        const holeCount = holes.length
+        const selection = Math.floor(Math.random() * holeCount) % holeCount
 
-</script>
-</body>
+        // duration
+        const maxDur = 600 // ms
+        const minOffset = 400 // ms
+        const duration = (Math.floor(Math.random() * maxDur) % maxDur) + minOffset
+
+        holes[selection].classList.add('up')
+        setTimeout(() => {
+          holes[selection].classList.remove('up')
+        }, duration)
+
+        return duration
+      }
+
+      // neat function taken from https://stackoverflow.com/a/39914235
+      function sleep(ms) {
+        return new Promise((resolve) => setTimeout(resolve, ms))
+      }
+
+      // TODO total duration is 10 seconds
+      let score = 0
+      async function startGame() {
+        score = 0
+        scoreBoard.innerHTML = score
+        const startTime = Date.now()
+        const tenSeconds = 10000 // ms
+        let now = Date.now()
+        console.log(now - startTime)
+        while (now - startTime < tenSeconds) {
+          const waitTime = pickHole()
+
+          await sleep(waitTime)
+          now = Date.now()
+        }
+      }
+
+      function handleClick(e) {
+        score = score + 1
+        scoreBoard.innerHTML = score
+        // TODO make sure one mole only gets one score!
+      }
+
+      moles.forEach((m) => m.addEventListener('click', handleClick))
+    </script>
+  </body>
 </html>
